# snippets

./: .gitignore  .gitmodules  Makefile  room.go
bash/: array.sh  err_auto_exit.sh  format.sh  func_with_parameters.sh  math.sh  replace_periodic_repeat_text.sh  rm_expire_time_log.sh  test.sh  tst.sh
c/: msh.c  second_one.c  tst-attribute_packed.c  tst-string.c  tst-tst.c  tst-xxx.c  tst_err.c  wrap.c
c++/: FileLocker.cpp  a.cpp  boost-cmdline.cpp  crcmodel.c  enum.cc  gdbinit.sh  heap.h  memcpy_class.cpp  ofstream.cc  primer-return_list_initilaze.cpp  rand-gen.cpp  rand.txt  skiplist.h  sort.cpp  test.txt  test1.txt  tmp.h  tmp.txt  tst-Polymorphic.cpp  tst-abort.cc  tst-async_log.cc  tst-bits.cc  tst-boost_filesystem.cc  tst-boost_timer.cpp  tst-buf_stream.cc  tst-c++0x.cc  tst-char[].cpp  tst-chrono.cc  tst-chrono_implicit_duration_cast.cc  tst-chrono_time_since_epoch.cc  tst-class within char[].cpp  tst-cstdio_rename.cc  tst-cv.cc  tst-eunm.cpp  tst-function.cc  tst-gen_uuid.cc  tst-glog.cc  tst-leveldb_open.cc  tst-linux_flock.cc  tst-mem_fun.cc  (+31 more)
cxx/: CMakeLists.txt  main.cc  test_brpc.cc  test_chrono_time_since_epoch.cc  test_enable_if.cc  test_numeric_string_spliter.cc  test_protobuf.cc  test_retry_policy.cc  test_rocksdb.cc
cxx/common/: common.h  time_util.h
go/: .gitignore  chan.go  chan_and_go.go  color.go  colorful_printf.go  count_characters.go  cpubusy.go  defer.go  defer_logvalues.go  enum.go  fibonacci.go  fibonacci_closure.go  fileinput.go  filescaner.go  float64_to_int64.go  fmt.go  fmt_errorf.go  for_arrays.go  for_string.go  function_return.go  (+79 more)
(+638 files in other folders)
